--- a/application/requirements.txt
+++ b/application/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.28.0
-psycopg2-binary==2.9.7
-pandas==2.1.3
-plotly==5.17.0
-streamlit-option-menu==0.3.6
+streamlit>=1.30.0
+psycopg2-binary>=2.9.0
+pandas>=2.0.0
+plotly>=5.0.0
+python-dotenv>=1.0.0
+sqlalchemy>=2.0.0
