--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-streamlit>=1.30.0
+﻿streamlit>=1.30.0
 psycopg2-binary>=2.9.0
 pandas>=2.0.0
 plotly>=5.0.0
 python-dotenv>=1.0.0
 sqlalchemy>=2.0.0
+reportlab>=4.0.0
+openpyxl>=3.1.0
