--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,23 @@
-﻿streamlit>=1.30.0
-psycopg2-binary>=2.9.0
+﻿# Core
+streamlit>=1.30.0
 pandas>=2.0.0
-plotly>=5.0.0
+numpy>=1.24.0
 python-dotenv>=1.0.0
+
+# Database
+psycopg2-binary>=2.9.0
 sqlalchemy>=2.0.0
+
+# Visualizations
+plotly>=5.0.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+
+# Export
 reportlab>=4.0.0
 openpyxl>=3.1.0
-matplotlib>=3.7.0
-numpy>=1.24.0
-seaborn>=0.12.0
+xlsxwriter>=3.1.0
+
+# Utils
+scipy>=1.11.0
+scikit-learn>=1.3.0
